# hoverlink

./: .clang-format  .clang-tidy  LICENSE  README.md  meson.build  meson_options.txt
apps/: meson.build
apps/fgmanager/: meson.build
apps/hoverlink/: meson.build
include/net/: common.hpp
libs/: meson.build
libs/network/: meson.build
libs/network/include/network/: common.hpp  tcp_client.hpp  tcp_server.hpp  udp_client.hpp
libs/network/src/: tcp_client.cpp  tcp_server.cpp  udp_client.cpp
libs/protocol/: meson.build
libs/protocol/include/protocol/: messages.hpp
libs/protocol/schemas/: command.fbs  status.fbs  telemetry.fbs
libs/protocol/src/: messages.cpp
src/: main.cpp
