option('enable_tests', type : 'boolean', value : false, description : 'Enable building tests')
option('enable_examples', type : 'boolean', value : false, description : 'Enable building examples')
option('tcp_port', type : 'integer', value : 8080, description : 'Default TCP port')
option('udp_port', type : 'integer', value : 8081, description : 'Default UDP port')
